<resources>
    <string name="app_name">不可卸载管理</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="opensource">开源项目</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="at">本应用基于开源项目 Shizuku 实现\n\n本工具无需常驻后台且修改后永久有效\n\n应用已开源至GitHub</string>
    <string name="other">其他</string>
    <string name="lab_cancel">取消</string>
    <string name="lab_submit">确定</string>
    <string name="power_sound">电源提示音</string>
    <string name="low_battery_sound">低电量提示音</string>
    <string name="low_battery_sound_path">自定义低电量提示音</string>
    <string name="lock_sound">锁屏提示音</string>
    <string name="unlock_sound">解锁提示音</string>
    <string name="lock_sound_path">自定义锁屏提示音</string>
    <string name="unlock_sound_path">自定义解锁提示音</string>
    <string name="appcenter">发送错误报告</string>
    <string name="acinfo">AppCenter</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="status">状态</string>
    <string name="shizukuRunStatus">Shizuku 服务没有运行</string>
    <string name="shizuku_GrantStatus">Shizuku 没有授权</string>
    <string name="use_to_writefile">用于往公共目录拉屎</string>
    <string name="use_to_getDervinfo">拿你隐私</string>
    <string name="workserverDesc">跟随 Shizuku 启动的进程</string>
    <string name="uninstall_desc">我们借助Shizuku从系统底层管理应用的卸载行为, 这使得我们能够让第三方应用像系统应用那样被禁止卸载</string>
    <string name="removeNeteaseAd">移除网易云音乐启动页广告</string>
    <string name="aboutBlackUninstall">关于卸载</string>
    <string name="removePowersave">移除电池优化白名单</string>
    <string name="suppert_msg">暂无服务提供商</string>
</resources>