<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:allowDividerAbove="false"
    app:allowDividerBelow="false">

    <PreferenceCategory app:title="@string/setting">

        <SwitchPreference app:key="开关" app:title="@string/power_sound"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">
        <SwitchPreference app:key="appcanter"
            app:title="@string/appcenter"
            android:summary="@string/acinfo"
            android:defaultValue="true"
            app:icon="@drawable/ic_baseline_bug_report_24"/>

        <PreferenceScreen
            android:key="opensource"
            app:icon="@drawable/ic_baseline_open_in_browser_24"
            app:title="@string/opensource">
        </PreferenceScreen>

        <PreferenceScreen
            android:key="about"
            app:icon="@drawable/ic_baseline_error_24"
            app:title="@string/about">
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>